# CeWeC

./: .gitignore  CMakeLists.txt  README.md  process_all_las_in_folder.sh
include/utils/: las_io.h
src/: alignSample.cpp  main.cpp  processLASsample.cpp
src/utils/: las_io.cpp
